# comp0034-cw2i-SHOX1ie-main

./: README.md  pyproject.toml  requirements.txt
data/: df_prepared.csv
src/: app.py
src/assets/: slider_style.css
src/figures/: figure_analysis.py  figure_home.py  figure_postgraduate.py  figure_undergraduate.py
src/pages/: Analysis.py  Home.py  Postgraduate.py  Undergraduate.py
tests/: test_dash.py
